--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
     <html lang="en">
-        <head>
+        <head>       
             <meta charset="utf-8">
             <title>Viscious Cycles</title>
-            <link rel="stylesheet" type="text/css" href="myStyles.css"/>
+            <style>
+                body{background-color: #E7FBFB;
+                    font-size: 4em;
+                    text-align: center;
+                }
+            </style>
         </head>
         <body>
-            <h1>Viscious Cycles</h1>
+            <h1 style="color: #010B5B;"> Viscious Cycles</h1>
         </body>
     </html>
